--- a/style.css
+++ b/style.css
@@ -26,12 +26,12 @@ body {
 	width: 50%;
 	padding-left: 30px;
 	text-align: left;
-	font-size: 20pt;
+	font-size: 150%;
 }
 .right {
 	width: 10%;
-	text-align: right;
-	font-size: 20pt;
+	text-align: center;
+	font-size: 120%;
 }
 .school {
 	color: gray;
@@ -65,12 +65,16 @@ body {
 .calc {
 	font-weight:bold;
 	font-size: 15pt;
-	color: lightgray;
+	color: #f5c1a9;
 	border: 2px solid;
 	border-radius: 20px;
 	margin-left: 15px;
 	margin-top: 20px;
 	padding: 0px 10px;
+}
+.navigation-block {
+	display: inline;
+	/* padding: 30px; */
 }
 .calc:hover {
 	color: #dd438b;
