--- a/style.css
+++ b/style.css
@@ -1,16 +1,6 @@
 body {
 	background: #900748;
 }
-.head {
-	width: 100%;
-	padding: 0px;
-}
-.nav {
-	width: 100%;
-	border-collapse: collapse;
-	background-color: #f5c1a9;
-	font-family: helvetica;
-}
 .links {
 	text-decoration: none;
 	letter-spacing: 3px;
@@ -22,16 +12,17 @@ body {
 	text-decoration: underline;
 	color: #a21155;
 }
-.left {
+.about-dev {
 	width: 50%;
-	padding-left: 30px;
-	text-align: left;
-	font-size: 150%;
 }
-.right {
-	width: 10%;
-	text-align: center;
-	font-size: 120%;
+.header, .about-img {
+	width: 100%;
+}
+.nav {
+	width: 100%;
+	border-collapse: collapse;
+	background-color: #f5c1a9;
+	font-family: helvetica;
 }
 .school {
 	color: gray;
@@ -48,13 +39,27 @@ body {
 }
 .matics {
 	color: #900748;
+	letter-spacing: 3px;
+	font-weight: bolder;
+	text-shadow: 1px 1px 0 black;
 }
 .club {
 	color: gray;
+	letter-spacing: 3px;
+	font-weight: bolder;
+	text-shadow: 1px 1px 0 black;
 }
 .project {
 	color: gray;
 	font-family: alison;
+	letter-spacing: 3px;
+	font-weight: bolder;
+	text-shadow: 1px 1px 0 black;
+}
+.multiple {
+	color: white;
+	text-align: center;
+	font-size: 200%;
 }
 .nav-buttons {
 	background-color: transparent;
@@ -63,8 +68,7 @@ body {
 	margin: 20px;
 }
 .calc {
-	font-weight:bold;
-	font-size: 15pt;
+	font-size: 100%;
 	color: #f5c1a9;
 	border: 2px solid;
 	border-radius: 20px;
@@ -72,34 +76,30 @@ body {
 	margin-top: 20px;
 	padding: 0px 10px;
 }
-.navigation-block {
-	display: inline;
-	/* padding: 30px; */
-}
 .calc:hover {
 	color: #dd438b;
 	text-decoration: none;
 }
-.legend {
-	color: white;
-	font-size: 2rem;
+.head {
+	color: #900748;
+	font-size: 150%;
 	font-weight: bold;
-	margin: auto;
+	text-align: left;
+	margin-top: 5%;
+	margin-left: 2%;
 }
 .label {
-	color: white;
-	font-weight: bolder;
+	color: #900748;
 	font-style: italic;
-	text-shadow: -1px -1px 5px black;
-	padding-left: 20px;
+	font-size: 80%;
+	margin: 0;
+	margin-left: 2%;
 }
 .input {
-	width: 90%;
-	height: 40px;
-	margin: 5px;
+	width: 100%;
+	height: 100%;
 	text-align: center;
-	letter-spacing: 5px;
-	font-size: 20pt;
+	font-size: 150%;
 	color: #900748;
 	text-shadow: 1px 1px 4px #dd438b;
 	padding-left: 20px;
@@ -107,61 +107,51 @@ body {
 	border-radius: 20px;
 	border: none;
 	border-bottom: 4px solid #dd438b;
-	margin-bottom: 20px;
 }
 .submit {
-	width: 150px;
-	border: 3px solid white;
+	width: 45%;
+	border: 2px solid white;
 	background-color: #760336;
 	color: white;
 	padding-left: 0;
-	margin: 10px 60px;
+	margin: 2% 0;
 }
 .submit:hover {
 	background-color: white;
 	color: #760336;
-	font-weight: bold;
 }
-.fcleft {
-	background-color: #7e043a;
-	margin-top: 40px;
-	width: 45%;
-	float: left;
+.calc-wrap {
+	background-color: #f5c1a9;
+	border-radius: 10%;
+	border: 1% solid #900748;
+	box-shadow: 0px 0px 10px #900748;
+	margin: 2% 4%;
 }
-.fcright {
-	background-color: #7e043a;
-	margin-top: 40px;
-	width: 45%;
-	float: right;
-}
-
 #contact-table {
 	width: 100%;
-	border-spacing: 10px;
+	border-spacing: 5%;
 	border-collapse: collapse;
-	padding: 20px;
-	font-size: 2rem;
-	letter-spacing: 4px;
+	padding: 2%;
+	font-size: 100%;
 	color: #f5c1a9;
 	text-shadow: 1px 0 0 #f5c1a9;
 }
 #About-head {
-	font-size: 3rem;
-	letter-spacing: -3px;
+	font-size: 200%;
 	color: white;
 	text-shadow: 0 0 40px black;
-	padding-top: 100px;
-	padding-bottom: 50px;
+	padding-top: 10%;
+	padding-bottom: 2%;
+	text-align: center;
 }
 .about-img {
-	float: left;
 	width: 100%;
 }
 .article {
-	width: 90%;
-	font-size: 2rem;
+	width: 100%;
+	font-size: 200%;
 	font-family: helvetical;
-	padding: 10px;
+	padding: 2%;
 }
 .article-head {
 	color: #f5c1a9;
@@ -169,9 +159,13 @@ body {
 #about-table {
 	width: 100%;
 	border-collapse: collapse;
-	font-familyhelvetica;
-	margin: 20px;
+	font-family: helvetica;
+	margin: 5%;
 	clear: both;
+}
+.table {
+	width: 100%;
+
 }
 #footer-wrap {
 	text-align: center;
