--- a/style.css
+++ b/style.css
@@ -3,108 +3,114 @@ body {
 	margin: 0;
 	padding: 0;
 }
-.dropdown-menu {
-	background-color: transparent;
-}
-.dropdown-item {
-	background-color: #900748;
-	color: white;
-}
-.nav-span {
-	text-decoration: none;
-	letter-spacing: 3px;
-	text-shadow: 1px 1px 0 black;
-	color: #900;
-	font-family: sans-serif;
-	font-weight: bodler;
-}
-.nav-span:hover {
-	text-decoration: underline;
-	color: white;
-}
-.about-dev {
-	width: 30%;
-}
-.header {
+
+#banner-container > img {
 	width: 100%;
 }
-.nav {
-	width: 100%;
-	border-collapse: collapse;
+
+#navbar {
 	background-color: #f5c1a9;
 	font-family: helvetica;
 }
-.school {
+
+.navbar-light .navbar-nav .nav-link {
+	color: #f5c1a9;
+}
+
+.btn-outline-warning {
+	background-color: #900748;
+	margin: 0 0 0 3px;
+	transition: all 0.5s;
+}
+
+.btn-outline-warning:hover {
+	transform: scale(1.05);
+}
+
+.dropdown-menu {
+	background-color: transparent;
+}
+
+.dropdown-menu:active {
+	background-color: red;
+}
+
+.dropdown-item {
+	background-color: #f5c1a9;
+	color: #900748;
+}
+
+#navbar h3 span {
+	letter-spacing: 5px;
+	word-spacing: 10px;
+	font-weight: bold;
+}
+
+#motto-container small {
 	color: #900748;
 	font-style: italic;
 	font-size: 10pt;
 	font-family: helvetica;
 	letter-spacing: 2px;
 }
-.maths {
-	letter-spacing: 5px;
-	word-spacing: 10px;
-	font-weight: bolder;
-	color: green;
-}
+
 .matics {
 	color: #900748;
 	letter-spacing: 3px;
 	font-weight: bolder;
 	text-shadow: 1px 1px 0 black;
 }
+
 .lab {
 	color: gray;
 	letter-spacing: 3px;
 	font-weight: bolder;
 	text-shadow: 1px 1px 0 black;
 }
-.project {
-	color: gray;
-	letter-spacing: 3px;
-	text-shadow: 1px 1px 0 black;
-}
-.multiple {
+
+#calc-navigation-container > h3 {
 	color: white;
 	text-align: center;
 	font-size: 200%;
 }
-.nav-buttons {
-	background-color: transparent;
-	border: none;
-	padding: 30px;
-	margin: 20px;
-}
-.btn-outline-warning {
+
+.my-flex-item .btn-outline-warning  {
 	color: #f5c1a9;
 	border-color: #f5c1a9;
 }
-.btn:hover {
+
+.my-flex-item .btn-outline-warning:hover {
 	background-color: #f5c1a9;
 	color: #900748;
 	border-color: #f5c1a9;
 }
-.calc:hover {
-	color: #900748;
-	text-decoration: none;
+
+.calc-container {
 	background-color: #f5c1a9;
-	text-shadow: none;
+	border-radius: 10%;
+	border: 1% solid #900748;
+	box-shadow: 0px 0px 10px #900748;
+	margin: 2% 4%;
 }
-.head {
+
+.calc-container > h3 {
 	color: #900748;
 	font-size: 150%;
 	font-weight: bold;
 	text-align: left;
 	margin-top: 5%;
 	margin-left: 2%;
+	text-align: center;
 }
-.label {
+
+.input-container > label {
 	color: #900748;
 	font-style: italic;
 	font-size: 80%;
 	margin: 0;
 	margin-left: 2%;
 }
+
 .input {
 	width: 100%;
 	height: 100%;
@@ -118,6 +124,7 @@ body {
 	border: none;
 	border-bottom: 4px solid #dd438b;
 }
+
 .submit {
 	width: 40%;
 	border: 2px solid white;
@@ -126,18 +133,18 @@ body {
 	padding-left: 0;
 	margin: 3% 0;
 }
+
 .submit:hover {
 	background-color: white;
 	color: #760336;
 }
-.calc-wrap {
-	background-color: #f5c1a9;
-	border-radius: 10%;
-	border: 1% solid #900748;
-	box-shadow: 0px 0px 10px #900748;
-	margin: 2% 4%;
+
+.submit:active {
+	background-color: #760336;
+	color: white;
 }
-#About-head {
+
+#about-container > h3 {
 	font-size: 200%;
 	color: white;
 	text-shadow: 0 0 40px black;
@@ -145,27 +152,31 @@ body {
 	padding-bottom: 2%;
 	text-align: center;
 }
-.about-img {
-	width: 50%;
-}
+
 .article {
 	width: 100%;
 	font-size: 200%;
 	font-family: helvetical;
 	padding: 2%;
 }
-.article-head {
+
+.article .img {
+	width: 50%;
+}
+
+
+.article > h2 {
 	color: #f5c1a9;
 }
 
-#footer-wrap {
+#footer-container {
 	text-align: center;
 	font-size: 60%;
 	background-color: black;
 	color: #fff;
 	padding: 1%;
 }
-#up-arrow {
+
+#up-arrow-container a, #up-arrow-container a img {
 	width: 5em;
-	float: left;
 }
